--- a/main.html
+++ b/main.html
@@ -3,14 +3,13 @@
 <html>
 
 <head>
-	<div class="header">
-		<h1>Shaw's News</h1>
-	</div>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	
+	<header class="header">
+		<h1>Shaw's News</h1>
+	</header>
 
 	<div class="container">
 		
